--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 								<p>Hello! I like playing Fortnite, Roblox, and Pokemon Go. I stream my Fortnite gameplay on Twitch and upload videos to my Youtube channel. I like Five Nights at Freddy's, Pokemon, Naruto, and Sonic!</p>
 								<p>Discord username: Brandon the Fnaf god#9456</p>
 								<p>Discord server: <a href="https://discord.gg/ke79HjDbpA">Join server!</a></p>
+								<p>Fortnite username: PikachuDrizzle</p>
 								<p>Pokemon Go friend code: 0304 1759 0733</p>
 								<p>Roblox: <a href="https://www.roblox.com/users/3088849845/profile">Send a friend request!</a></p>
 								<p>Youtube channel: <a href="https://www.youtube.com/channel/UCJsFj9rJuZOIHX7XM4bsn_g">Subscribe!</a></p>
