--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<nav id="nav">
 									<ul class="actions stacked special animated spinY">
 										<li><a href="#work" class="button">About & Links</a></li>
-										<li><a href="#about" class="button">Wishlist</a></li>
+										<li><a href="https://www.amazon.com/hz/wishlist/ls/R0AFO46G8HZA?ref_=wl_share" class="button">Wishlist</a></li>
 										<!--<li><a href="#contact" class="button">Contact</a></li>-->
 										<!--<li><a href="#elements" class="button">Elements</a></li>-->
 									</ul>
