--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<nav id="nav">
 									<ul class="actions stacked special animated spinY">
 										<li><a href="#work" class="button">About & Links</a></li>
-										<li><a href="https://www.amazon.com/hz/wishlist/ls/R0AFO46G8HZA?ref_=wl_share" class="button">Wishlist</a></li>
+										<li><a href="#about" class="button">Wishlist</a></li>
 										<!--<li><a href="#contact" class="button">Contact</a></li>-->
 										<!--<li><a href="#elements" class="button">Elements</a></li>-->
 									</ul>
@@ -53,17 +53,16 @@
 							</ul>
 							<div class="inner">
 								<header>
-									<h2>About & Links</h2>
-									<!--<p>About me and links to my social media and streaming profiles. Please send me a friend request and follow me!</p>-->
+								<h2>About & Links</h2>
+								<!--<p>About me and links to my social media and streaming profiles. Please send me a friend request and follow me!</p>-->
 								</header>
 								<p>Hello! I like playing Fortnite, Roblox, and Pokemon Go. I stream my Fortnite gameplay on Twitch and upload videos to my Youtube channel. I like Five Nights at Freddy's, Pokemon, Naruto, and Sonic!</p>
-								<p>Discord username: Brandon the Fnaf god#9456</p>
-								<p>Discord server: <a href="https://discord.gg/ke79HjDbpA">Join server!</a></p>
-								<p>Fortnite username: PikachuDrizzle</p>
-								<p>Pokemon Go friend code: 0304 1759 0733</p>
-								<p>Roblox: <a href="https://www.roblox.com/users/3088849845/profile">Send a friend request!</a></p>
-								<p>Youtube channel: <a href="https://www.youtube.com/channel/UCJsFj9rJuZOIHX7XM4bsn_g">Subscribe!</a></p>
-								<p>Twitch stream: <a href="https://www.twitch.tv/pikachudrizzle">Follow and subscribe!</a></p>
+								<p>Discord server: </p>
+								<p>Fortnite username: </p>
+								<p>Pokemon Go friend code: </p>
+								<p>Roblox: </p>
+								<p>Youtube channel: </p>
+								<p>Twitch stream: </p>
 							</div>
 						</div>
 					</article>
