--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 									</ul>
 								</nav>
 								<ul class="icons">
-									<li><a href="https://discord.gg/ke79HjDbpA" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
-									<li><a href="https://www.tiktok.com/@yougotwicked" class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
-									<li><a href="https://www.youtube.com/channel/UCJsFj9rJuZOIHX7XM4bsn_g" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-									<li><a href="https://www.twitch.tv/pikachudrizzle" class="icon brands fa-twitch"><span class="label">Twitch</span></a></li>
+									<li><a href="#" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+									<li><a href="#" class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
+									<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+									<li><a href="#" class="icon brands fa-twitch"><span class="label">Twitch</span></a></li>
 								</ul>
 							</div>
 						</div>
